# NexusMind-2.0

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  health_check.py  initialize_request.json  mkdocs.yml  mypy.ini  neo4j_windows_wsl2_docs.md  output.prof  profile_runner.py  pyproject.toml  pyrightconfig.json  setup_claude_connection.py  smithery.yaml  status.html
.devcontainer/: devcontainer.json
.github/workflows/: ci-tests.yml  codacy.yml  codeql.yml  gh-pages.yml
.md/: CHANGELOG.md  CLAUDE_INTEGRATION.md  PYTHON_UPGRADE_SUMMARY.md  claude_desktop_integration.md  desktop.ini
_site/: 404.html  index.html  sitemap.xml
_site/CONTRIBUTING/: index.html
_site/ROADMAP/: index.html
_site/api/mcp_api/: index.html
_site/assets/javascripts/lunr/: tinyseg.js
_site/configuration/: index.html
_site/extending/custom_stages/: index.html
_site/extending_with_claude/: index.html
_site/getting_started/: index.html
_site/neo4j_indexing/: index.html
_site/search/: search_index.json
_site/setup/neo4j_windows_wsl2_docs/: index.html
_site/status_info/: index.html
_site/testing/testing_strategy_and_example/: index.html
_site/usage/: index.html
c__/Users/sapta/OneDrive/Desktop/NexusMind/config/: claude_mcp_config.json
config/: claude_mcp_config.json  config.schema.json  settings.yaml
docs/: extending_with_claude.md
docs/suggested_issues/: integration_with_arxiv_api.md  ui_for_graph_visualization.md
docs/testing/: testing_strategy_and_example.md
docs_src/: ROADMAP.md  configuration.md  getting_started.md  index.md  neo4j_indexing.md  status_info.md  usage.md
docs_src/api/: mcp_api.md
docs_src/extending/: custom_stages.md
git/: README.md
git/src/asr_got_reimagined/api/routes/: mcp.py
git/src/asr_got_reimagined/domain/stages/: base_stage.py
git/test/: test_mcp_endpoints.py
scripts/: add_evidence_types.py  add_type_annotations.py  add_type_hints.py  docker-entrypoint.sh  extract_clean_stage4.py  fix_imports.py  fix_indentation.py  fix_stage4_evidence.py  mcp_inspector_executor.py  run_mcp_inspector.sh
scripts/profiling/: analyze_profile.py  profile_runner.py
simple_tests/: SimpleTestDockerfile  desktop.ini  simple_config.py  simple_mcp_server.py  simple_test.py  simple_test_server.py
src/asr_got_reimagined/: __init__.py  app_setup.py  config.py  main.py  main_stdio.py  server_factory.py  server_factory.py.bak
src/asr_got_reimagined/api/: __init__.py  schemas.py
src/asr_got_reimagined/api/routes/: __init__.py  mcp.py
src/asr_got_reimagined/domain/models/: __init__.py  common.py  common_types.py  graph_elements.py  graph_elements.py.fixed  graph_state.py  scoring.py
src/asr_got_reimagined/domain/services/: __init__.py  got_processor.py  neo4j_utils.py
src/asr_got_reimagined/domain/stages/: *  __init__.py  base_stage.py  stage_1_initialization.py  stage_2_decomposition.py  stage_3_hypothesis.py  stage_4_evidence.py  stage_5_pruning_merging.py  stage_6_subgraph_extraction.py  stage_7_composition.py  stage_8_reflection.py
src/asr_got_reimagined/domain/utils/: __init__.py  graph_analysis_helpers.py  graph_analysis_neo4j.py  loguru_types.py  math_helpers.py  metadata_helpers.py
src/loguru-stubs/: __init__.pyi
test/: TestDockerfile  socket_test.py  test_http_mcp.py  test_mcp_endpoints.py  test_request.py  test_server.py
tests/integration/api/: socket_test.py  test_mcp_inspector.py  test_request.py  test_stdio_mcp.py
tests/integration/api/data/: test_query.json
